2015-01-21  Yoshinori Sato <ysato@users.sourceforge.jp>

	* Makefile.am: (ALL_EMULATION_SOURCES): Add new emulations.
	* Makefile.in: Regenerate.
	* configure.tgt: Add h8300-*-linux
	* emulparams/h8300elf_linux.sh: Add new emulation.
	* emulparams/h8300helf_linux.sh: Likewise.
	* emulparams/h8300self_linux.sh: Likewise.
	* emulparams/h8300sxelf_linux.sh: Likewise.

2015-02-23  Nick Clifton  <nickc@redhat.com>

	* lexsup.c (parse_args): Produce a more reasonable error message
	when -ixxx or -rxxx is the last option on the linker command line.

2015-02-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/17973
	* testplug2.c (allsymbolsread_silent): New.
	(set_register_hook): Handle allsymbolsreadsilent.
	(onall_symbols_read): Skip a message if allsymbolsread_silent is
	TRUE.

2015-02-14  Alan Modra  <amodra@gmail.com>

	PR ld/17973
	* ldlang.h (struct lang_input_statement_flags): Add lto_output.
	* ldlang.c (lang_process): Don't set loading_lto_outputs.
	* ldfile.c (ldfile_try_open_bfd): Transfer entry flags.lto_output
	to bfd.
	* plugin.c (add_input_file, add_input_library): Set flags.lto_output.

2015-02-13  H.J. Lu  <hongjiu.lu@intel.com>

	* NEWS: Mention support for LLVM plugin.

2015-02-13  Alan Modra  <amodra@gmail.com>

	* ld.texinfo (Options <--defsym>): Correct cross reference.

2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* lexsup.c (ld_options): Add --[no-]map-whole-files for gold
	option compatibility.

2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* plugin.c (message): Output "warning:" for LDPL_WARNING. Output
	"error:" for LDPL_FATAL and LDPL_ERROR.
	* testplug2.c (parse_option): Handle fatal, error and warning.

2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* testplug2.c (dump_tv_tag): Removed.
	(onall_symbols_read): Return LDPS_ERR if the file descriptor isn't
	closed.
	* testplug3.c (dump_tv_tag): Removed.
	(onclaim_file): Fix typo.

2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/17878
	* Makefile.am (noinst_LTLIBRARIES): Add libldtestplug2.la and