@@ -1,0 +1,5 @@
+.section .text
+.byte 0xA
+.byte 0xB
+.byte 0xC
+.byte 0xD
